--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-# Caminho para o arquivo do modelo GGUF
-# Deixe vazio para usar o modelo padrão ou baixar automaticamente
+# Path to the GGUF model file
+# Leave empty to use default model or download automatically
 MODEL_PATH=
 
-# URL para baixar o modelo automaticamente (opcional)
-# Exemplo: https://huggingface.co/...
+# URL to download model automatically (optional)
+# Example: https://huggingface.co/...
 MODEL_URL=
 
-# Configurações do modelo
+# Model configurations
 CONTEXT_SIZE=2048
 N_THREADS=4
 N_GPU_LAYERS=0
