Add session management and streaming support
- Introduced session management features, allowing users to create, continue, and end conversation sessions with automatic history trimming.
- Added environment variables for session configuration and streaming options.
- Updated README with detailed usage instructions for new session and streaming functionalities.
- Enhanced server logic to handle session history and streaming text generation.
- Updated .env.example and .gitignore to reflect new session-related configurations and ignore history files.

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,23 @@ MODEL_URL=
 CONTEXT_SIZE=2048
 N_THREADS=4
 N_GPU_LAYERS=0
+
+# Session / history configuration
+# Directory (relative to server.py) where conversation history will be stored
+SESSION_HISTORY_DIR=history
+
+# Maximum number of messages to keep per session (most recent are kept)
+SESSION_MAX_MESSAGES=40
+
+# Approximate maximum size in bytes per session file (older messages are trimmed)
+SESSION_MAX_FILE_BYTES=2097152
+
+# Whether to automatically trim history files when limits are exceeded (true/false)
+SESSION_AUTO_TRIM=true
+
+# Streaming configuration
+# Enable streaming responses (tokens/chunks sent incrementally instead of waiting for full response)
+STREAMING_ENABLED=false
+
+# Approximate chunk size for streaming (in characters). Smaller values = more frequent updates but more overhead
+STREAMING_CHUNK_SIZE=50
